prevent page shift when scrollbar appears

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,13 @@
 :root {
   --primary: #4b71cd;
   --error: #e7195a;
-  width: 100%;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
   background: #f1f1f1;
   margin: 0;
-  font-family: "Poppins";
+  font-family: 'Poppins';
   width: 100%;
 }
